<resources>
    <string name="app_name">myMenu</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">dashboard</string>
    <string name="title_notifications">notifications</string>
    <string name="title_activity_register_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="get_otp"> get OTP </string>
    <string name="ful_nm"> full name </string>
    <string name="mo_no">mobile number</string>
    <string name="only_for_in">app registeration only for indian mobile no.</string>
    <string name="veri_otp">verify OTP</string>
    <string name="otp"> OTP </string>
    <string name="itm_nm">item name</string>
    <string name="title_activity_full_text">FullscreenActivity</string>
    <string name="place_ordr">place order</string>
    <string name="itms">items</string>
    <string name="title_activity_fullscreen_menu_ordered">FullscreenActivity</string>
    <string name="infoLater">you can add your info, if OTP is verified</string>
    <string name="title_activity_for_whom_do_u_want_to_work">FullscreenActivity</string>
    <string name="sho_fod_mnu">show food menu</string>
    <string name="sho_wrk_btns">show work buttons</string>
    <string name="indi">person</string>
    <string name="enti">company</string>
    <string name="sel_e">select the owner / company</string>
    <string name="sel_i">select client side person / company</string>
    <string name="undr_enti">under a company</string>
    <string name="enti_no">enter entity number</string>
    <string name="book_seats">book these seats</string>
    <string name="seat_no">seat number</string>
    <string name="sho_seats">show travels seats</string>
    <string name="booker"> कस्टमर चे नाव </string>
    <string name="seats_booked">बुक केलेले आसन क्रमांक.</string>
    <string name="tot_seats_booked">एकूण आसने</string>
    <string name="rct_no">रिसिट क्रमांक</string>
    <string name="vo_no">कस्टमर मोबाइल क्रमांक</string>
    <string name="adva">advance received</string>
    <string name="rmna">remaining amount</string>
    <string name="gpay">google pay</string>
    <string name="cash">cash</string>
    <string name="amtrc">amt received in</string>
    <string name="luga">लगेज माहिती</string>
    <string name="unit">unit</string>
    <string name="packet">पाकीट</string>
    <string name="amt">रक्कम</string>
    <string name="tamt">एकूण रक्कम</string>
    <string name="pishwi">पिशवी</string>
    <string name="box">बॉक्स</string>
    <string name="goan">गोण</string>
    <string name="other">इतर</string>
    <string name="pic_place">बसण्याचे ठिकाण</string>
    <string name="drop_place">उतारण्याचे ठिकाण</string>
    <string name="ven_lst">vehicle list</string>
    <string name="sho_dt_seats">show seats of this date</string>
    <string name="vec_no">गाड़ी क्रमांक</string>
    <string name="showMore">show more</string>
    <string name="adVecNo">add new vehicle number</string>
    <string name="vecNo">vehicle number without (-)</string>
    <string name="vecLst">vehicles already in your list</string>
    <string name="shoAvailableOnDt">set this vehicle as available on this date</string>
    <string name="setpi">4 digit pin</string>
    <string name="veriOtpSetPin">on next screen, verify otp and set pin\nwithin 100 seconds</string>
    <string name="lgn">login</string>
    <string name="nw_lgn">multi profile login system</string>
    <string name="nw_lgn_m">select relation with owner of mobile number\nand enter pin to login</string>
    <string name="vrfyB4">verify and set pin\nwithin 100 seconds</string>
    <string name="forwho">touch to set for whom to work</string>
    <string name="xpl">explanation</string>
    <string name="upd">update</string>
    <string name="dttt">date time of validity</string>
    <string name="lstbt4u">list of buttons assigned to you by given no</string>
    <string name="sav">save</string>
    <string name="remem">remember</string>
    <string name="scanqr">scan qr code</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="cancel">cancel</string>
    <string name="cancelseat">cancel this seat</string>
    <string name="noPg">There is no work page that can handle this work.\n\n\nplease update the app\nor\ncontact administrator</string>
    <string name="sitenm">site name</string>
    <string name="siteLst">sites list</string>
    <string name="sho_in_btns">show inside work buttons</string>
    <string name="updtPresenc">update presency</string>
    <string name="seldt">select date</string>
    <string name="ttl">title</string>
    <string name="addEmp">add this employee</string>
    <string name="submit">submit</string>
    <string name="show">show</string>
    <string name="xpLst">list of expenses</string>
    <string name="addNwXp">add this expenditure name</string>
    <string name="mchLst">list of machine</string>
    <string name="iwwfthis">i will work for this no.</string>
    <string name="addNw">add new</string>
    <string name="trans">transfer</string>
</resources>