<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="11sp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:hint="@string/vecNo"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/act_to_add_vehicle_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7sp"
            android:layout_marginEnd="7sp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
            android:inputType="textCapCharacters"
            android:maxLength="15"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/act_to_add_vehicle_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adVecNo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/vecLst"
        android:padding="5sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/act_to_add_vehicle_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:entries="@array/arrBlank"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/act_to_add_vehicle_ll_bydt_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/act_to_add_vehicle_tv_dt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="select date"
            android:textSize="33sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/act_to_add_vehicle_tv_pckup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/pic_place"
                android:padding="11sp" />

            <TextView
                android:id="@+id/act_to_add_vehicle_tv_drop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/drop_place"
                android:padding="11sp" />
        </LinearLayout>

        <Button
            android:id="@+id/act_to_add_vehicle_bydt_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoAvailableOnDt" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>