<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="11sp"
    android:background="#fcf0f0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pop_win_tv_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/seldt"
            android:paddingLeft="5sp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/pop_win_tv_tit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="3sp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/ttl"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/pop_win_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/showMore"
            android:padding="7sp"
            app:srcCompat="@drawable/ic_baseline_cancel_24" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>