<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="horizontal"
            android:paddingStart="11sp"
            android:paddingEnd="11sp">

            <RadioButton
                android:id="@+id/la_seat_itm_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/male" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/la_seat_itm_et_ocupier_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="7sp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_faint"
                android:padding="7sp" />

            <RadioButton
                android:id="@+id/la_seat_itm_rb_fmale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/female" />
        </RadioGroup>

        <Button
            android:id="@+id/la_seat_itm_bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancelseat" />

        <ImageView
            android:id="@+id/la_seat_itm_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/seat_no"
            android:scaleType="fitCenter"
            cardView:srcCompat="@drawable/ic_seat_vertical" />

    </LinearLayout>
</androidx.cardview.widget.CardView>