<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7sp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/act_4emp_presency_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/seldt"
            android:paddingLeft="5sp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/act_4emp_presency_tv_tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="3sp"
            android:gravity="center"
            android:hint="@string/ttl" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/act_4emp_presency_rc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:entries="@array/arrBlank"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <Button
        android:id="@+id/act_4emp_presency_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11sp"
        android:layout_marginEnd="11sp"
        android:text="@string/updtPresenc" />
</androidx.appcompat.widget.LinearLayoutCompat>