<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/act_psjc_lst_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:entries="@array/arrBlank"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00555555"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/act_psjc_lst_tv_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="11sp"
            android:layout_marginEnd="11sp"
            android:text="0"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="22sp"
            android:text="@string/itms"
            android:textStyle="bold" />

        <Button
            android:id="@+id/act_psjc_lst_btn_place_ord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11sp"
            android:layout_weight="1"
            android:text="@string/place_ordr" />

        <ImageView
            android:id="@+id/act_psjc_lst_iv_scan_todays_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/scanqr"
            android:paddingStart="22sp"
            android:paddingTop="7sp"
            android:paddingEnd="22sp"
            android:paddingBottom="7sp"
            app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>