<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/la_singl_emp_presen_llao"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7sp"
    android:background="@drawable/bg_rounded_faint"
    android:orientation="vertical"
    android:padding="7sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/la_singl_emp_presen_iv_xpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/showMore"
            android:padding="7sp"
            app:srcCompat="@drawable/ic_baseline_chevron_right_24" />

        <TextView
            android:id="@+id/la_singl_emp_presen_tv_sr"
            android:layout_width="33sp"
            android:layout_height="33sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/circle"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/la_singl_emp_presen_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/vec_no"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/la_singl_emp_presen_unit"
            android:layout_width="55sp"
            android:layout_height="wrap_content"
            android:hint="@string/unit"
            android:padding="7sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/la_singl_emp_presen_qty"
            android:layout_width="33sp"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:gravity="end"
            android:hint="qt"
            android:inputType="number"
            android:maxLength="2"
            android:padding="5sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/la_singl_emp_presen_tv_mono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7sp"
        android:paddingTop="11sp"
        android:paddingBottom="11sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/la_singl_emp_presen_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="99sp"
        android:entries="@array/arrBlank"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>