<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7sp">

    <LinearLayout
        android:id="@+id/act_2crud_xp_lao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/act_2crud_xp_tv_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/seldt"
            android:paddingLeft="5sp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/act_2crud_xp_tv_tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="3sp"
            android:gravity="center"
            android:hint="@string/ttl"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/act_2crud_xp_ti_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:entries="@array/arrBlank"
        android:padding="11sp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/act_2crud_xp_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/showMore"
            android:padding="7sp"
            app:srcCompat="@drawable/ic_baseline_save_24" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/act_2crud_xp_ti_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#faf1fa"
            android:gravity="end"
            android:inputType="text"
            android:paddingStart="7sp"
            android:paddingEnd="7sp"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/act_2crud_xp_iv_sho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/showMore"
            android:padding="7sp"
            app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/act_2crud_xp_ti_q"
            android:layout_width="66sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_rounded_faint"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="7"
            android:paddingStart="7sp"
            android:paddingEnd="7sp"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>